tests/snapshots/integration__integration_tests__list__status_column_padding_emoji.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m        [1mStatus[0m         [1mHEAD±[0m    [1mmain↕[0m  [1mPath[0m            [1mRemote⇅[0m  [1mCommit[0m    [1mAge[0m   [1mMessage[0m
@ [1m[35mmain[0m              [2m^[0m                          [1m[35m./test-repo[0m              [2mb834638e[0m  [2m10mo[0m  [2mInitial commit[0m
+ main-symbol       [2m↑[0m  💬              [32m↑1[0m      ./main-symbol            [2m579fcd0b[0m  [2m10mo[0m  [2mSymbol commit[0m
+ pr-link           [2m↑[0m  🤖              [32m↑1[0m      ./pr-link                [2me17e7d2d[0m  [2m10mo[0m  [2mPR commit[0m
+ wli-sequence   [36m![0m[36m?[0m [2m↑[0m  🤖    [32m+1[0m [31m-112[0m   [32m↑1[0m      ./wli-sequence           [2ma2483ffd[0m  [2m10mo[0m  [2mInitial content[0m

⚪ [2mShowing 4 worktrees, 1 with changes, 3 ahead[0m
